--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ADDword" />
+
+        <provider
+            android:name=".DatabaseProvider"
+            android:authorities="com.example.a30259.word_note.provider"
+            android:enabled="true"
+            android:exported="true"></provider>
     </application>
 
 </manifest>
